# MultiLangRepo

./: MultiLangRepo.sln
MultiLangRepo/: README.md
MultiLangRepo/cpp/file-processor/: CMakeLists.txt
MultiLangRepo/cpp/file-processor/include/: file_processor.h
MultiLangRepo/cpp/file-processor/src/: csv_writer.cpp  file_reader.cpp  main.cpp  path_utils.cpp
MultiLangRepo/cpp/math-engine/: CMakeLists.txt
MultiLangRepo/cpp/math-engine/include/: expression_parser.h  statistics.h
MultiLangRepo/cpp/math-engine/src/: expression_parser.cpp  main.cpp
MultiLangRepo/dotnet/DataAccess/: QueryBuilder.cs  SqlConnectionManager.cs
MultiLangRepo/dotnet/Utilities/: EmailValidator.cs  StringHelpers.cs  Utilities.csproj
MultiLangRepo/dotnet/eShopMvc/: Global.asax  Global.asax.cs  eShopMvc.csproj  packages.config
MultiLangRepo/java/json-toolkit/: pom.xml
MultiLangRepo/java/sorting-demo/: pom.xml
MultiLangRepo/python/config-manager/: pyproject.toml
MultiLangRepo/python/data-pipeline/: pyproject.toml
MultiLangRepo/python/log-analyzer/: pyproject.toml
MultiLangRepo/typescript/csv-parser/: package.json
MultiLangRepo/typescript/http-client/: package.json  tsconfig.json
MultiLangRepo/typescript/task-manager/: package.json
cpp/math-engine/include/: matrix.h
cpp/math-engine/src/: matrix.cpp  statistics.cpp
cpp/string-utils/: CMakeLists.txt
cpp/string-utils/include/: string_utils.h  tokenizer.h
dotnet/DataAccess/: DataAccess.csproj  GenericRepository.cs
dotnet/Utilities/: RetryHelper.cs
dotnet/eShopMvc/: Web.config
java/inventory-service/: pom.xml
(+47 files in other folders)
